tests/NormalTests/paczka1/small_fuzzy/39296278.err
Error in line 1: XjPfyZxSH S473 7,2
Error in line 6: 2rUjxtunh S228 14,9
